Bug 2008973: Update smartbar background and text for dark mode. r=ai-frontend-reviewers,flozia,desktop-theme-reviewers,dao
Figma: https://www.figma.com/design/5KuePTGmOEUFyCHBHCsGim/AI-Mode-%E2%80%94%C2%A0MVP-Scope-Design?node-id=11889-19377&m=dev

Updated for dark mode according to Figma:
1. smart bar background
2. smart bar box shadow effect (using pseudo elements because it's a gradient)
3. smart bar disabled button background and icon color
4. memories toggle icon color

Differential Revision: https://phabricator.services.mozilla.com/D280502

UltraBlame original commit: 55902ee395988296c76344dcb5792ca68e5add4b

--- a/browser/themes/shared/smartbar.css
+++ b/browser/themes/shared/smartbar.css
@@ -7,9 +7,10 @@
 :root {
   --smartbar-border-style-gradient: var(--border-width) solid;
   --smartbar-border-color-gradient: linear-gradient(172deg, #321bfd -18%, #cf30e2 53%, #ff9900 89%, #f5c451 109%);
+  --smartbar-border-color-gradient-dark: linear-gradient(270deg, var(--color-orange-40) 0%, var(--color-violet-50) 105.15%);
   --smartbar-max-width: calc(var(--size-item-xlarge) * 12);
-  --smartbar-shadow-color: color-mix(in srgb, var(--color-violet-40) 30%, transparent);
-  --smartbar-shadow: 0 2px 14px var(--smartbar-shadow-color);
+  --smartbar-shadow: 0 2px 14px color-mix(in srgb, var(--color-violet-40) 30%, transparent);
+  --smartbar-background-color: light-dark(white, var(--color-violet-110));
 }
 
 .smartbar {
@@ -26,10 +27,25 @@
 .smartbar > .urlbar-background {
   background-color: white;
   background-clip: padding-box, border-box;
-  background-image: linear-gradient(white, white), var(--smartbar-border-color-gradient);
+  background-image: linear-gradient(var(--smartbar-background-color), var(--smartbar-background-color)), var(--smartbar-border-color-gradient);
   background-origin: border-box;
   border-radius: var(--border-radius-large);
   border: var(--smartbar-border-style-gradient) transparent;
+
+  @media (prefers-color-scheme: dark) {
+    background-image: linear-gradient(var(--smartbar-background-color), var(--smartbar-background-color)), var(--smartbar-border-color-gradient-dark);
+
+    /* creating a gradient box shadow effect for dark mode */
+    &::before {
+      background-image: var(--smartbar-border-color-gradient-dark);
+      border-radius: inherit;
+      content: "";
+      filter: blur(30px) opacity(0.7);
+      inset: 0;
+      position: absolute;
+      z-index: -1;
+    }
+  }
 
   .smartbar[open] > & {
     /* stylelint-disable-next-line stylelint-plugin-mozilla/use-design-tokens */
